Thu Jun 10 09:05:00 UTC 2010  Simon Massey  <simon dot massey at prismtech dot com>

        * TAO_IDL/ast/ast_template_module_ref.cpp:

          Missed one of the turn off options in my last update.

Wed Jun  9 21:53:04 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/util/utl_global.cpp:

          Changed signature of add_to_included_idl_files()
          to take a const char*.

        * TAO_IDL/be/be_visitor_typecode/typecode_decl.cpp:

          Cosmetic changes.

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:
        * TAO_IDL/be/be_generator.cpp:
        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/fe/idl.ll:

          Changes to support multiplex receptacles in
          AMI4CCM.

Wed Jun  9 15:54:00 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_2909_Regression/client.cpp:
        * tests/Bug_2560_Regression/Stock_i.h:
        * tests/Bug_2560_Regression/Stock_Factory_i.cpp:
        * tests/Bug_2560_Regression/server.cpp:
        * tests/Bug_2560_Regression/Stock_Factory_i.h:
        * tests/Bug_2560_Regression/Stock_i.cpp:
        * tests/OBV/Forward/Test_impl.cpp:
        * tests/OBV/Truncatable/TruncatableS_impl.cpp:
        * tests/OBV/Any/client.cpp:
        * tests/Bug_2805_Regression/client.cpp:
        * tests/Bug_2953_Regression/server.cpp:
        * tests/Bug_2188_Regression/client.cpp:
        * tests/Bug_2654_Regression/client.cpp:
        * tests/Bug_2654_Regression/Hello.cpp:
          Fixed memory leaks and fixed some of compile warnings.

        * tests/Bug_3853_Regression/client.cpp:
        * tests/Bug_3853_Regression/server.cpp:
          Fixed compile errors in wchar builds.

Wed Jun  9 13:45:00 UTC 2010  Simon Massey  <simon dot massey at prismtech dot com>

        * TAO_IDL/ast/ast_structure_fwd.cpp:
        * TAO_IDL/ast/ast_module.cpp:
        * TAO_IDL/ast/ast_interface_fwd.cpp: